--- a/css/input.css
+++ b/css/input.css
@@ -78,12 +78,11 @@ input{
     height: 25px;
     padding: 3px;
     background-color: rgb(239, 239, 239);
-    filter: drop-shadow(2px 2px 5px rgb(255, 233, 36));
 }
 
-input:hover{
+/* input:hover{
     filter: drop-shadow(1px 1px 2px rgba(0, 145, 31, 10));
-}
+} */
 
 .value{
     display: inline;
