--- a/css/input.css
+++ b/css/input.css
@@ -1,75 +1,33 @@
-body{
+body {
     background-repeat: no-repeat;
     background-size: cover;
 }
 
-.container{
+.container {
     display: flex;
-    /* border: 1px dashed; */
-    margin-top: 10%;
-    margin-left: 22%;
+    margin-top: 7rem;
+    justify-content: center;
     width: auto;
-    /* backdrop-filter: blur(10px); */
 }
 
-.side{
-    border: 1px solid orange;
-    border-top-left-radius: 20px;
-    border-bottom-left-radius: 20px;
-    width: 400px;
-    backdrop-filter: blur(3px);
+.heading{
+    display: flex;
+    align-items: center;
+    margin-left: 2rem;
 }
-.anim_icon{
-    height: auto;
-    width: 300px;
-    margin-left: 60px;
-    animation: move 2s infinite;
-}
-@keyframes move {
-    0%{
-        transform: translateY(0px);
-    }
-    50%{
-        transform: translateY(5px);
-    }
-    100%{
-        transform: translateY(0px);
-    }
-}
-.main{
-    height: 400px;
-    width: 300px;
-    border: 1px solid orange;
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
-    padding: 50px;
-    background-image: linear-gradient(315deg, #ff4e00 0%, #ec9f05 74%);
-    filter: drop-shadow(8px 8px 10px rgba(180, 180, 180, 0.5));
-}
-
-.log{
+.log {
     height: 70px;
     width: 70px;
-    display:block;
-    margin-left: 30px;
+    display: block;
 }
 
-.head{
-    margin-top: -85px;
-    margin-left: 10px;
+.head {
     color: black;
-    font-family: Papyrus;
     text-align: center;
     font-size: larger;
 }
 
-.element{
-    padding: 10px;
-    /* color: rgba(0, 190, 0, 0.861);*/
-    color: rgb(233, 233, 233);
-}
-
-input{
+input {
     border: 1px solid red;
     border-radius: 10px;
     margin-left: 30px;
@@ -77,32 +35,35 @@ input{
     width: 200px;
     height: 25px;
     padding: 3px;
-    background-color: rgb(239, 239, 239);
+    background-color: rgb(231, 228, 228);
 }
 
-/* input:hover{
-    filter: drop-shadow(1px 1px 2px rgba(0, 145, 31, 10));
-} */
-
-.value{
+.value {
     display: inline;
     font-size: large;
     color: white;
     margin-left: 40px;
+    font-family: 'Courier New', Courier, monospace;
 }
 
-.agree{
-    margin-top: 40px;
+.agree {
+    display: flex;
+    align-items: stretch;
+    margin-top: 2rem;
     color: white;
     font-size: large;
+    font-family: 'Courier New', Courier, monospace;
 }
 
-.check{
-    margin-left: 70px;
-    margin-top: -25px;
+.ag {
+    margin-left: 3rem;
 }
 
-button{
+.check {
+    margin-right: 3rem;
+}
+
+#btn {
     margin-top: 30px;
     margin-left: 50px;
     border-radius: 7px;
@@ -114,9 +75,70 @@ button{
     box-shadow: 1px 1px 3px rgb(255, 0, 0);
 }
 
-button:hover{
+#btn:hover {
     transform: scale(1.4);
     background-image: linear-gradient(315deg, #fbb034 0%, #ffdd00 74%);
     color: white;
+    font-style: italic;
     box-shadow: 0px 0px;
+}
+
+@media only screen and (min-width: 1000px) {
+
+    .side {
+        border: 1px solid orange;
+        border-top-left-radius: 20px;
+        border-bottom-left-radius: 20px;
+        width: 400px;
+        backdrop-filter: blur(3px);
+    }
+
+    .anim_icon {
+        height: auto;
+        width: 300px;
+        margin-left: 60px;
+        animation: move 2s infinite;
+    }
+
+    @keyframes move {
+        0% {
+            transform: translateY(0px);
+        }
+
+        50% {
+            transform: translateY(3px);
+        }
+
+        100% {
+            transform: translateY(0px);
+        }
+    }
+
+    .main {
+        height: 400px;
+        width: 300px;
+        border: 1px solid orange;
+        border-top-right-radius: 20px;
+        border-bottom-right-radius: 20px;
+        padding: 50px;
+        background-image: linear-gradient(315deg, #ff6600 0%, #ec9f05 74%);
+        filter: drop-shadow(8px 8px 10px rgba(180, 180, 180, 0.5));
+    }
+
+}
+
+@media only screen and (max-width: 999px) {
+    
+    .main {
+        height: 400px;
+        width: 250px;
+        border: 2px solid orange;
+        border-radius: 20px;
+        padding: 50px;
+        background-image: linear-gradient(315deg, #ff4e00 0%, #ec9f05 74%);
+    }
+
+    .side{
+        display: none;
+    }
 }
