--- a/css/input.css
+++ b/css/input.css
@@ -7,7 +7,7 @@ body {
     display: flex;
     margin-top: 7rem;
     justify-content: center;
-    width: auto;
+    /* width: auto; */
 }
 
 .heading{
@@ -16,24 +16,26 @@ body {
     margin-left: 2rem;
 }
 .log {
-    height: 70px;
-    width: 70px;
+    height: 30%;
+    width: 30%;
     display: block;
 }
 
 .head {
     color: black;
     text-align: center;
-    font-size: larger;
+    font-size: 60%;
+    /* font-size: larger; */
 }
 
-input {
+.element {
+    display: flex;
     border: 1px solid red;
     border-radius: 10px;
     margin-left: 30px;
-    margin-top: 5px;
-    width: 200px;
-    height: 25px;
+    margin-top: 1rem;
+    width: 70%;
+    height: 1.5rem;
     padding: 3px;
     background-color: rgb(231, 228, 228);
 }
@@ -42,12 +44,14 @@ input {
     display: inline;
     font-size: large;
     color: white;
-    margin-left: 40px;
+    /* margin-top: ; */
+    margin-left: 2rem;
     font-family: 'Courier New', Courier, monospace;
 }
 
 .agree {
     display: flex;
+    margin-left: -1rem;
     align-items: stretch;
     margin-top: 2rem;
     color: white;
@@ -64,8 +68,8 @@ input {
 }
 
 #btn {
-    margin-top: 30px;
-    margin-left: 50px;
+    margin-top: 2rem;
+    margin-left: 3rem;
     border-radius: 7px;
     font-family: Papyrus;
     transform: scale(1.3);
@@ -125,13 +129,18 @@ input {
         filter: drop-shadow(8px 8px 10px rgba(180, 180, 180, 0.5));
     }
 
+    /* .element{
+        width: 200px;
+        height: 25px;
+    } */
+
 }
 
 @media only screen and (max-width: 999px) {
-    
+
     .main {
         height: 400px;
-        width: 250px;
+        width: 40%;
         border: 2px solid orange;
         border-radius: 20px;
         padding: 50px;
