--- a/css/input.css
+++ b/css/input.css
@@ -7,51 +7,15 @@ body {
     display: flex;
     margin-top: 7rem;
     justify-content: center;
-    /* width: auto; */
 }
 
 .heading{
     display: flex;
     align-items: center;
-    margin-left: 2rem;
-}
-.log {
-    height: 30%;
-    width: 30%;
-    display: block;
-}
-
-.head {
-    color: black;
-    text-align: center;
-    font-size: 60%;
-    /* font-size: larger; */
-}
-
-.element {
-    display: flex;
-    border: 1px solid red;
-    border-radius: 10px;
-    margin-left: 30px;
-    margin-top: 1rem;
-    width: 70%;
-    height: 1.5rem;
-    padding: 3px;
-    background-color: rgb(231, 228, 228);
-}
-
-.value {
-    display: inline;
-    font-size: large;
-    color: white;
-    /* margin-top: ; */
-    margin-left: 2rem;
-    font-family: 'Courier New', Courier, monospace;
 }
 
 .agree {
     display: flex;
-    margin-left: -1rem;
     align-items: stretch;
     margin-top: 2rem;
     color: white;
@@ -60,7 +24,7 @@ body {
 }
 
 .ag {
-    margin-left: 3rem;
+    margin: 10px auto;
 }
 
 .check {
@@ -73,7 +37,7 @@ body {
     border-radius: 7px;
     font-family: Papyrus;
     transform: scale(1.3);
-    transition: transform background-color;
+    transition: all background-color;
     transition-duration: 0.2s;
     border: 0px solid;
     box-shadow: 1px 1px 3px rgb(255, 0, 0);
@@ -87,16 +51,20 @@ body {
     box-shadow: 0px 0px;
 }
 
-@media only screen and (min-width: 1000px) {
+@media only screen and (min-width: 800px) {
 
     .side {
         border: 1px solid orange;
         border-top-left-radius: 20px;
         border-bottom-left-radius: 20px;
         width: 400px;
-        backdrop-filter: blur(3px);
+        backdrop-filter: blur(.5rem);
     }
-
+    .head {
+        color: rgb(243, 243, 243);
+        margin: auto;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
     .anim_icon {
         height: auto;
         width: 300px;
@@ -128,18 +96,35 @@ body {
         background-image: linear-gradient(315deg, #ff6600 0%, #ec9f05 74%);
         filter: drop-shadow(8px 8px 10px rgba(180, 180, 180, 0.5));
     }
-
-    /* .element{
-        width: 200px;
-        height: 25px;
-    } */
+    .log {
+        transform: translateX(2rem);
+        height: 4rem;
+        width: 4rem;
+    }
+    .element {
+        display: flex;
+        border: .5px solid red;
+        border-radius: 10px;
+        width: 70%;
+        height: 1.6rem;
+        padding: 5px;
+        background-color: rgb(231, 230, 228);
+        margin: 1rem auto;
+    }
+    .value {
+        display: inline;
+        font-size: large;
+        color: white;
+        font-family: 'Courier New', Courier, monospace;    
+        margin: 1rem 3rem;
+    }
 
 }
 
-@media only screen and (max-width: 999px) {
+@media only screen and (max-width: 799px) {
 
     .main {
-        height: 400px;
+        
         width: 40%;
         border: 2px solid orange;
         border-radius: 20px;
@@ -149,5 +134,42 @@ body {
 
     .side{
         display: none;
+    }
+
+    .heading{
+        display: flex;
+        align-items: center;
+    }
+    .head {
+        color: rgb(238, 238, 238);
+        /* margin: auto; */
+        font-size: 10px;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
+    .log{
+        width: 3rem;
+        height: 3rem;
+
+    }
+    .ag {
+        margin: 10px auto;
+    }
+
+    .element {
+        display: flex;
+        border: 1px solid red;
+        border-radius: 10px;
+        margin-top: 1rem;
+        width: 90%;
+        height: 1.5rem;
+        padding: 3px;
+        background-color: rgb(231, 228, 228);
+    }
+    .value {
+        display: inline;
+        font-size: large;
+        color: white;
+        /* transform: translateY(); */
+        font-family: 'Courier New', Courier, monospace;
     }
 }
